// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render when isContextualSearchPending matches snapshot, renders LoadingBarContent 1`] = `
.c0 {
  border-radius: 0.5714285714285714rem 0.5714285714285714rem 0 0;
  padding: 0.5714285714285714rem 1rem;
  background: !important;
  color: !important;
}

.c3 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c6:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c1:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c1 .c2:first-child {
  margin-left: 4rem;
}

.c1 .c2:nth-child(2) {
  margin-left: 2rem;
}

.c1 .c2:last-child {
  margin-right: 4rem;
}

.c1 .c2:nth-last-child(2) {
  margin-right: 2rem;
}

.c1 .c4 {
  width: 2rem !important;
  height: 2rem !important;
}

.c5 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c5:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c8 {
  display: block;
}

.c7 {
  margin-bottom: 0;
}

.c13 {
  position: relative !important;
  margin-top: 1.0714285714285714rem;
}

.c14 {
  padding-right: 0.7142857142857143rem !important;
  padding-left: 0.7142857142857143rem !important;
  max-width: 14.285714285714286rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 {
  text-align: center !important;
  color: #2f3941;
  font-size: 1.0714285714285714rem;
  height: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  margin-bottom: 0 !important;
  margin-top: 1.4285714285714286 !important;
}

.c11 {
  color: #68737d;
  margin-bottom: 1.4285714285714286 !important;
}

<div>
  <div
    class="container"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <h1
          class="c2 c3"
          data-testid="widget-title"
        >
          pageTitle
        </h1>
        <button
          aria-label="Minimize"
          class="c4 index__c-btn--icon___1Yl4x c5 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
          data-garden-id="buttons.icon_button"
          data-garden-version="6.4.4"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="6.4.4"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
      <div
        class="c6"
      >
        <div
          class="form"
          data-testid="page-header-container"
        >
          <form
            class="c7"
            novalidate=""
          >
            <div
              aria-invalid="false"
              class="desktopContainer -div text__c-txt__input___38pRd text__is-focused___26DQb "
              data-garden-id="forms.faux_input"
              data-garden-version="6.4.4"
            >
              <label
                class="label text__c-txt__label___3wMPZ c8"
                data-garden-id="forms.text_label"
                data-garden-version="6.4.4"
                for="garden-field-container-2--input"
                id="garden-field-container-2--label"
              >
                How can we help?
              </label>
              <input
                aria-describedby="garden-field-container-2--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-2--label"
                autocapitalize="off"
                class="searchInput text__c-txt__input___38pRd text__c-txt__input--bare___wp3DV "
                data-garden-id="forms.input"
                data-garden-version="6.4.4"
                data-testid="search-field"
                id="garden-field-container-2--input"
                placeholder="How can we help?"
                type="search"
                value=""
              />
              <div
                class="desktopSearchOrLoading"
              >
                <span
                  class="icon focused notFocused"
                  data-testid="Icon--search"
                  role="button"
                  tabindex="0"
                >
                  <svg
                    realfilename="search.svg"
                  />
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <div
      class="container"
      data-testid="scroll-container-content"
    >
      <div
        class="c9"
      >
        <p
          class="c10"
        >
          There are no results for ""
        </p>
        <p
          class="c11"
        >
          Try searching for something else.
        </p>
      </div>
    </div>
    <footer
      class="footer footerShadow"
    >
      <div
        class="c12"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
        <div
          class="c13"
        >
          <div
            class="container buttonRight "
          >
            <button
              class="c14 index__c-btn___3y2Qe index__c-btn--primary___1YOfW "
              data-garden-id="buttons.button"
              data-garden-version="6.4.4"
              tabindex="0"
              type="button"
            >
              Leave us a message
            </button>
          </div>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`render when not isContextualSearchPending matches snapshot, renders NoResults 1`] = `
.c0 {
  border-radius: 0.5714285714285714rem 0.5714285714285714rem 0 0;
  padding: 0.5714285714285714rem 1rem;
  background: !important;
  color: !important;
}

.c3 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c6:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c1:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c1 .c2:first-child {
  margin-left: 4rem;
}

.c1 .c2:nth-child(2) {
  margin-left: 2rem;
}

.c1 .c2:last-child {
  margin-right: 4rem;
}

.c1 .c2:nth-last-child(2) {
  margin-right: 2rem;
}

.c1 .c4 {
  width: 2rem !important;
  height: 2rem !important;
}

.c5 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c5:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c8 {
  display: block;
}

.c7 {
  margin-bottom: 0;
}

.c13 {
  position: relative !important;
  margin-top: 1.0714285714285714rem;
}

.c14 {
  padding-right: 0.7142857142857143rem !important;
  padding-left: 0.7142857142857143rem !important;
  max-width: 14.285714285714286rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 {
  text-align: center !important;
  color: #2f3941;
  font-size: 1.0714285714285714rem;
  height: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  margin-bottom: 0 !important;
  margin-top: 1.4285714285714286 !important;
}

.c11 {
  color: #68737d;
  margin-bottom: 1.4285714285714286 !important;
}

<div>
  <div
    class="container"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <h1
          class="c2 c3"
          data-testid="widget-title"
        >
          pageTitle
        </h1>
        <button
          aria-label="Minimize"
          class="c4 index__c-btn--icon___1Yl4x c5 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
          data-garden-id="buttons.icon_button"
          data-garden-version="6.4.4"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="6.4.4"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
      <div
        class="c6"
      >
        <div
          class="form"
          data-testid="page-header-container"
        >
          <form
            class="c7"
            novalidate=""
          >
            <div
              aria-invalid="false"
              class="desktopContainer -div text__c-txt__input___38pRd text__is-focused___26DQb "
              data-garden-id="forms.faux_input"
              data-garden-version="6.4.4"
            >
              <label
                class="label text__c-txt__label___3wMPZ c8"
                data-garden-id="forms.text_label"
                data-garden-version="6.4.4"
                for="garden-field-container-0--input"
                id="garden-field-container-0--label"
              >
                How can we help?
              </label>
              <input
                aria-describedby="garden-field-container-0--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-0--label"
                autocapitalize="off"
                class="searchInput text__c-txt__input___38pRd text__c-txt__input--bare___wp3DV "
                data-garden-id="forms.input"
                data-garden-version="6.4.4"
                data-testid="search-field"
                id="garden-field-container-0--input"
                placeholder="How can we help?"
                type="search"
                value=""
              />
              <div
                class="desktopSearchOrLoading"
              >
                <span
                  class="icon focused notFocused"
                  data-testid="Icon--search"
                  role="button"
                  tabindex="0"
                >
                  <svg
                    realfilename="search.svg"
                  />
                </span>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <div
      class="container"
      data-testid="scroll-container-content"
    >
      <div
        class="c9"
      >
        <p
          class="c10"
        >
          There are no results for ""
        </p>
        <p
          class="c11"
        >
          Try searching for something else.
        </p>
      </div>
    </div>
    <footer
      class="footer footerShadow"
    >
      <div
        class="c12"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
        <div
          class="c13"
        >
          <div
            class="container buttonRight "
          >
            <button
              class="c14 index__c-btn___3y2Qe index__c-btn--primary___1YOfW "
              data-garden-id="buttons.button"
              data-garden-version="6.4.4"
              tabindex="0"
              type="button"
            >
              Leave us a message
            </button>
          </div>
        </div>
      </div>
    </footer>
  </div>
</div>
`;
